--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "max dev",
     "format": "prettier --cache --write .",
     "postinstall": "max setup",
+    "lint": "max lint",
+    "lint:fix": "max lint --fix",
     "prepare": "husky install",
     "setup": "max setup",
     "start": "npm run dev"
@@ -23,6 +25,7 @@
     "bootstrap-icons": "^1.10.3",
     "classnames": "^2.3.2",
     "mitt": "^3.0.0",
+    "react": "^18.0.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.0.0",
     "react-render-html": "^0.6.0"
